| Summary: | ASTERISK-27217: chan_sip: Asterisk crashing when subscription doesn't get set | ||
| Reporter: | Bryan Walters (gamegamer43) | Labels: | |
| Date Opened: | 2017-08-24 10:53:06 | Date Closed: | 2017-09-08 09:39:59 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/Subscriptions |
| Versions: | 13.17.0 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace.txt | |
| Description: | Using Asterisk 13.17.0, we are seeing Asterisk crash in the event that it is trying to get subscription->value but subscription = 0. From conversations I've had to better understand the issue, my understanding is that if Asterisk tries to set a subscription but is unable to, it returns an error which gets handled. However, that doesn't seem to be the case with this backtrace. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-08-24 10:53:07.514-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Richard Mudgett (rmudgett) 2017-08-24 12:12:17.741-0500 The problem is {{get_sip_pvt_from_replaces()}} not returning -1 when it couldn't find sip_pvt_ptr. By: Friendly Automation (friendly-automation) 2017-09-08 09:39:59.960-0500 Change 6455 merged by Joshua Colp: chan_sip: when getting sip pvt return failure if not found [https://gerrit.asterisk.org/6455|https://gerrit.asterisk.org/6455] By: Friendly Automation (friendly-automation) 2017-09-08 09:48:46.955-0500 Change 6454 merged by Jenkins2: chan_sip: when getting sip pvt return failure if not found [https://gerrit.asterisk.org/6454|https://gerrit.asterisk.org/6454] By: Friendly Automation (friendly-automation) 2017-09-08 09:53:30.012-0500 Change 6452 merged by Jenkins2: chan_sip: when getting sip pvt return failure if not found [https://gerrit.asterisk.org/6452|https://gerrit.asterisk.org/6452] By: Friendly Automation (friendly-automation) 2017-09-08 10:26:17.761-0500 Change 6450 merged by Jenkins2: chan_sip: when getting sip pvt return failure if not found [https://gerrit.asterisk.org/6450|https://gerrit.asterisk.org/6450] | ||